--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,97 +1,14 @@
-/* Глобальні стилі */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
-    background-color: #e8f5e9;
-    /* Світлий зелений фон для всього сайту */
-    color: #2c6d47;
-    /* Темно-зелений текст */
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.5;
-    height: 100vh;
-    padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4 {
-    font-family: 'Roboto', sans-serif;
-    color: #2c6d47;
-    font-weight: bold;
-}
-
-/* Стилі для посилань */
-a {
-    color: #4caf50;
-    /* Зелений для посилань */
-    text-decoration: none;
-    font-weight: 500;
-    transition: color 0.3s ease-in-out;
-}
-
-a:hover {
-    color: #2e7d32;
-    /* Трохи темніший зелений при наведенні */
-}
-
-/* Основні кнопки */
-button {
-    background-color: #4caf50;
-    color: white;
-    padding: 12px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease-in-out;
-}
-
-button:hover {
-    background-color: #388e3c;
-    transform: translateY(-5px);
-}
-
-button:active {
-    background-color: #2c6d47;
-    transform: translateY(2px);
-}
-
-/* Навігація */
-.navbar {
+.appBar {
     display: flex;
     justify-content: center;
-    /* Центрування всіх елементів */
     align-items: center;
-    background-color: #4caf50;
-    padding: 20px;
-    border-radius: 8px;
-    margin-top: 20px;
-}
-
-.navbar a {
-    color: white;
-    font-size: 18px;
-    padding: 15px 30px;
-    text-transform: uppercase;
-    transition: color 0.3s ease, transform 0.3s ease;
-    font-weight: 500;
-}
-
-.navbar a:hover {
-    color: #2e7d32;
-    transform: scale(1.1);
-    /* Збільшення при наведенні */
-}
-
-/* Підготовка для головної сторінки */
-.home-page {
-    text-align: center;
-    font-size: 24px;
-    color: #388e3c;
-    margin-top: 100px;
+    padding: 20px 0;
+    background-color: #d0f0d0;
+    box-shadow: 0 4px 6px rgba(0, 128, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    gap: 30px;
+   
 }
