--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,25 +1,27 @@
-.navbar {
+/* Navigation.module.css */
+.navigationBox {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #4caf50;
-    padding: 15px;
-    border-radius: 8px;
-    margin-bottom: 20px;
+    gap: 30px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.navLink {
-    color: white;
+.navigationEl {
     text-decoration: none;
+    color: #0a460a;
     font-size: 18px;
-    padding: 15px 30px;
-    text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 600;
     transition: color 0.3s ease, transform 0.3s ease;
 }
 
-.navLink:hover {
-    color: #2e7d32;
+.navigationEl:hover,
+.navigationEl:focus {
+    color: #00aa00;
     transform: scale(1.1);
-    /* Збільшення при наведенні */
+}
+
+.active {
+    color: #007f00;
+    border-bottom: 2px solid #007f00;
 }
